# powershell-controller

./: .coverage  .gitignore  6.7.0  AI_GUIDE.md  IMPROVEMENTS.md  MDC_structure_guidelines.md  MDCファーストアプローチ.md  README.md  issues.md  powershell_controller.py  pyproject.toml  pytest.ini  requirements.txt  ruff_fix_output.txt  settings.example.env  setup.py  test_powershell_python.ps1  test_python_jp.py  test_script.ps1
.cursor/rules/: AI_MODE_GUIDE.md  README.md  SIMPLIFIED_MDC.md  environment.mdc  flow_overview.mdc  init.mdc  main.mdc  mdc.mdc  mdc_cleanup_report.md  mdc_reference_index.mdc  project_structure.mdc  python_test.mdc  quick_reference.md  tool_settings.mdc  無題1_20250513_103645.txt  無題1_20250513_111527.txt
.cursor/rules/docs/: README.md  flow_execution.mdc  flow_phase.mdc  init.mdc  main.mdc  manual_reference.mdc  mdc_metamodel.mdc  tool_constraints.mdc
.cursor/rules/docs/guides/: ai_direct.md
.cursor/rules/docs/reports/: cleanup.md  ps1_cleanup.md  standardization.md
.cursor/rules/flow_templates/: issue_improvement.mdc  requirements_change.mdc
.cursor/rules/flows/: main.mdc
.cursor/rules/flows/main/: code_quality.mdc  issue_improvement.mdc  mdc_check.mdc  requirements_change.mdc
.cursor/rules/flows/phases/: contract.mdc  document.mdc  green.mdc  refactor.mdc
.cursor/rules/phases/: contract.mdc  document.mdc  green.mdc  red.mdc  refactor.mdc
.cursor/rules/policies/: flow_phase.mdc  manual_reference.mdc  rail.mdc
.cursor/rules/scripts/: auto_mdc_error_check.ps1  auto_mdc_error_record.ps1  mdc_ai_mode.ps1
.github/workflows/: test.yml
docs/: DESIGN.md  FEATURES.md  SPEC.md  template_usage.md
examples/: async_example.py  session_directory_navigation.py  shortcuts_example.py  simple_example.py
infra/: __init__.py
infra/utils/: __init__.py  errors.py  ipc.py  process_manager.py  test_helper.py
scripts/: README.md  demo_mdc_first.ps1  install_ai_mode.ps1  install_mdc_first.ps1  mdc_first_approach.ps1  quick_start.ps1
src/: install_packages.ps1  test_packages.py
src/powershell_controller/: __init__.py  command_executor.py  controller.py  error_handler.py  simple.py
src/powershell_controller.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/powershell_controller/core/: errors.py
src/powershell_controller/core/errors/: __init__.py
src/powershell_controller/core/session/: __init__.py  powershell.py
src/powershell_controller/infra/: __init__.py  process.py
src/powershell_controller/infra/async_utils/: process.py  test_helper.py
src/powershell_controller/infra/ipc/: __init__.py  protocol.py
src/powershell_controller/utils/: __init__.py  config.py  result_helper.py
src/py_pshell/: __init__.py  command_executor.py  config.py  controller.py  errors.py  interfaces.py  json_handler.py  process_manager.py  session.py  session_manager.py  simple.py  stream_handler.py
src/py_pshell/core/errors/: __init__.py
src/py_pshell/core/session/: base.py  powershell.py
src/py_pshell/infra/: process.py
src/py_pshell/infra/async_utils/: process.py  process_manager.py
src/py_pshell/utils/: __init__.py  command_executor.py  command_result.py  result_helper.py  session_util.py
src/py_pshell_async/: README.md  pyproject.toml
src/py_pshell_async/py_pshell_async/: __init__.py  async_loop.py  async_utils.py
src/py_pshell_core/: README.md  pyproject.toml
src/py_pshell_core/py_pshell_core/: __init__.py  controller.py
src/py_pshell_utils/: README.md  pyproject.toml
src/py_pshell_utils/py_pshell_utils/: __init__.py  config.py  result_helper.py
templates/: ai_assist.ps1  ai_implementer.ps1  ai_mdc_generator.ps1  ai_planner.ps1  session_template.py
tests/: conftest.py  test_controller.py  test_powershell_controller.py  test_simple.py  test_utils.py
tests/integration/: __init__.py  conftest.py  test_powershell.py  test_session.py
tests/unit/: conftest.py  test_command_executor.py  test_controller.py  test_error_recovery.py  test_import_warnings.py  test_ipc_protocol.py  test_json_handler.py  test_process_manager.py  test_stream_handler.py  test_utils.py
