[project]
name = "powershell_controller"
version = "0.1.0"
description = "PowerShell 7 controller for MCP"
requires-python = ">=3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 100
target-version = "py38"
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "C",  # flake8-comprehensions
    "B",  # flake8-bugbear
]
ignore = []

[tool.ruff.isort]
known-first-party = ["powershell_controller"]

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --cov=powershell_controller --randomly-seed=last --hypothesis-profile=default"

[tool.hypothesis]
deadline = 500
max_examples = 100
derandomize = true
database = ".hypothesis/examples"
profiles = {default = {max_examples = 100}, ci = {max_examples = 1000}}

[tool.beartype]
is_beartype = true
violation_type = "Exception"
conf_args = {is_debug = true} 