[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "py-pshell-async"
version = "0.1.0"
description = "PowerShell 7 controller async utilities"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT"}
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: System :: Systems Administration",
]

dependencies = [
    "loguru>=0.7.0",
    "beartype>=0.16.0",
    "typing-extensions>=4.2.0",
    "asyncio>=3.4.3",
]

[project.urls]
Homepage = "https://github.com/yourusername/py-pshell"
Issues = "https://github.com/yourusername/py-pshell/issues"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.18.0",
    "pytest-timeout>=2.1.0",
    "pytest-cov>=3.0.0",
    "pytest-mock>=3.12.0",
    "pytest-randomly>=3.15.0",
    "pytest-xdist>=3.5.0",
    "hypothesis>=6.98.0",
    "deepdiff>=6.7.0",
    "black>=22.3.0",
    "isort>=5.10.1",
    "ruff>=0.0.270",
    "mypy>=0.950",
    "flake8>=4.0.1",
    "pylint>=2.13.0",
]

[tool.setuptools]
package-dir = {"" = "."}

[tool.setuptools.packages.find]
where = ["."] 